CNETDEV-37718 initial v8 migrations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
       "~@sentry/core": [
         "./node_modules/@sentry/core"
       ],
-      "~@sentry/integrations": [
-        "./node_modules/@sentry/integrations"
-      ],
+      // "~@sentry/integrations": [
+      //   "./node_modules/@sentry/integrations"
+      // ],
       "~@sentry/utils": [
         "./node_modules/@sentry/utils"
       ],
